<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="10dp"
    android:layout_marginBottom="10dp">

    <View
        android:id="@+id/item_case_circle"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:background="@drawable/circle_green"/>

    <android.support.v4.widget.Space
        android:layout_width="16dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/item_case_folio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ph_case_folio"
        android:textAppearance="?android:textAppearanceSmall"/>

    <android.support.v4.widget.Space
        android:layout_width="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceSmall"
        android:text="-"/>

    <android.support.v4.widget.Space
        android:layout_width="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/item_case_categoria"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/ph_case_categoria"
        android:textAppearance="?android:textAppearanceSmall"/>

    <android.support.v4.widget.Space
        android:layout_width="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/item_case_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_fecha"
        android:textAppearance="?android:textAppearanceSmall"/>

</LinearLayout>