<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="propulsar.yonayarit.PresentationLayer.Activities.TabActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarDetalleBenefs"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="0dp"
        style="@style/AppThemeNoBar">

        <ImageView
            android:layout_width="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="3dp"
            android:src="@drawable/yonayarit"/>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <android.support.v7.widget.CardView
            android:visibility="invisible"
            android:id="@+id/buttonContestarEncuesta"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardElevation="4dp"
            app:cardCornerRadius="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:layout_margin="10dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                android:text="@string/benefs_contestarEncuesta"/>
        </android.support.v7.widget.CardView>

        <TextView
            android:visibility="invisible"
            android:id="@+id/benefs_encuestaContestada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"
            android:text="@string/benefs_encuestaContestada"/>

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_above="@id/buttonContestarEncuesta">

            <ImageView
                android:id="@+id/detBenefIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_benef_feed"/>

            <TextView
                android:id="@+id/detBenefFecha"
                android:layout_alignTop="@id/detBenefIcon"
                android:layout_alignBottom="@id/detBenefIcon"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/detBenefIcon"
                android:text="@string/placeholder_fecha"
                android:textColor="@color/textColorSecondary"/>

            <TextView
                android:id="@+id/detBenefTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detBenefFecha"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:textAppearance="?android:textAppearanceLarge"
                android:text="@string/detBenef_ph_titulo"/>

            <TextView
                android:id="@+id/detBenefDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detBenefTitulo"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/detBenef_ph_desc"/>

            <ImageView
                android:id="@+id/detBenefImagen"
                app:layout_heightPercent="40%"
                app:layout_widthPercent="100%"
                app:layout_marginTopPercent="60%"
                android:padding="10dp"
                android:background="@color/buttonGray"
                android:adjustViewBounds="true"
                android:foregroundGravity="center"
                android:src="@drawable/ic_diploma"/>

            <View
                app:layout_heightPercent="40%"
                app:layout_widthPercent="100%"
                app:layout_marginTopPercent="60%"
                android:padding="10dp"
                android:background="#66000000"
                android:adjustViewBounds="true"
                android:foregroundGravity="center"
                android:src="@drawable/ic_diploma"/>

        </android.support.percent.PercentRelativeLayout>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>