<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="propulsar.yonayarit.PresentationLayer.Activities.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="0dp"
        style="@style/AppThemeNoBar">

        <ImageView
            android:layout_width="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="3dp"
            android:src="@drawable/yonayarit"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:paddingTop="?attr/actionBarSize"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:clipToPadding="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:text="@string/registro_registrate"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_vertical_margin" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <propulsar.yonayarit.PresentationLayer.CustomViews.EditTextCorreo
                android:id="@+id/editTextCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/ph_correo" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutContra"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:errorEnabled="true">
                <EditText
                    android:id="@+id/editTextContra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/ph_contra" />
            </android.support.design.widget.TextInputLayout>
            <ImageSwitcher
                android:id="@+id/imageSwitcherContra"
                android:paddingBottom="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:backgroundTint="#FFF"
                />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_horizontal_margin" />

        <!-- MAIL LOGIN BUTTON-->
        <android.support.v7.widget.CardView
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:animateLayoutChanges="true"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textStyle="bold"
                    android:paddingEnd="10dp"
                    android:paddingStart="15dp"
                    android:textColor="@color/com_facebook_button_text_color"
                    android:text="@string/registro_button"/>
                <ProgressBar
                    android:id="@+id/progressButtonRegistrate"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/WhiteAccent"
                    style="?android:attr/progressBarStyleSmall"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>
